infrastructure/save/kubernetes/router/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: router
spec:
  replicas: 2
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      serviceAccountName: router-sa
      containers:
        - name: router
          image: <your ECR repo URL>/router:latest
          ports:
            - containerPort: 9090
